# stock-data

./: .gitignore  README.md
api제공처들/krbank/: KOSPI_200401_201805.csv
api제공처들/공공데이터포털/: [월평균환율정보]공공데이터명세서_20190603.docx
py-crawling/: .gitignore  crawler_economy_corporate_loan_month.py  crawler_economy_exchange_rate_dollar_day.py  crawler_economy_household_loan_month.py  crawler_kospi_daily.py  crawler_kospi_day.py  crawler_kospi_month.py  crawling_korbank.py  requirements.txt
py-crawling/backup/: crawler_economy_corporate_loan_month.py  crawler_economy_exchange_rate_dollar_day.py  crawler_kospi_month.py
py-crawling/credentials/: api_keys.py
py-crawling/jupyter_notebook/: alternative_api.ipynb  kospi_crawling_dataframe.ipynb
py-crawling/md/: korbank-api-tut.md
py-crawling/sql/: stock_kospi_daily.sql
py-scheduler/: Dockerfile  interval_webhook_monitoring.py  local-command.py  requirements.txt  setup.cfg  shell.py  ssh-command.py  test-process-checker.py  test-slack-webhook.py
py-scheduler/api제공처자료수집/: ecos-korbank-tut.md
py-scheduler/cli/: shell.py
py-scheduler/cli/toc/chk_process/: cmd1.py
py-scheduler/connections/: connection_info.py  toc_slack_info.py
py-scheduler/md/: Docker-tutorial-container.md
stock-api/: .gitignore  build.gradle  settings.gradle
stock-api/scripts/: deploy.sh
stock-data/: build.gradle  settings.gradle
stock-data-api/: .gitignore  pom.xml  server.jks
stock-data-api/md/: README.md  flow-chart-slack-security-jwt.pptx  note.md  (+8 more)
stock-data-node-old/: package.json
stock-data-web/: .env  .gitignore  app.js  package.json
(+181 files in other folders)
