[metadata]
name = tutorial
summary = tutorial cli
version = 0.0.1

[files]
packages = cli

[entry_points]
console_scripts =
    main_cli = cli.shell:main

cli.common.command_list =
    command_list = cli.common.module:ListCommand
;    serve = tutorial.cmd.web.api:RestAPIServe
;tutorial.cli.sub1 =
;    sub1_cmd1 = tutorial.cmd.sub1.cmd1:TutorialSub1Command1
;tutorial.cli.sub1_cmd1 =
;    hook1 = tutorial.cmd.sub1.cmd1:TutorialSub1Command1Hook
;    hook2 = tutorial.cmd.sub1.cmd1:TutorialSub1Command1Hook
;tutorial.cli.sub2 =
;    sub2_cmd1 = tutorial.cmd.sub2.cmd1:TutorialSub2Command1
;    sub2_cmd2 = tutorial.cmd.sub2.cmd2:TutorialSub2Command2
toc.cli.checking =
    check_process = cli.toc.chk_process.cmd1:
